# Prof-Frink

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
assets/: README.md
commands/: frink-cancel.md  frink-init.md  frink-research.md  frink-resume.md  frink-status.md  homer-cancel.md  homer-init.md  homer-research.md  homer-resume.md  homer-status.md
docs/: API.md
hooks/: hooks.json
lib/: __init__.py  prd_generator.py  quality_gates.py  research_loop.py  schemas.py
lib/db/: __init__.py  manager.py  schema.sql
tests/: conftest.py
tests/e2e/: test_research_pipeline.py
tests/unit/: test_db_manager.py  test_prd_generator.py  test_quality_gates.py  test_schemas.py
