[project]
name = "frink"
version = "1.0.0"
description = "FRINK: Fully Autonomous Research Intelligence & Knowledge - Named after Professor Frink"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "FRINK Contributors"}
]
keywords = [
    "autonomous-research",
    "scientific-computing",
    "machine-learning",
    "literature-review",
    "research-automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "sqlite-utils>=3.35",
    "gitpython>=3.1.40",
    "pydantic>=2.5",
    "jsonschema>=4.20",
    "jinja2>=3.1",

    # Data Processing
    "pandas>=2.1",
    "polars>=0.20",
    "numpy>=1.26",

    # Machine Learning
    "scikit-learn>=1.3",
    "torch>=2.1",
    "lightning>=2.1",

    # Statistics
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pingouin>=0.5",

    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # HTTP/API
    "httpx>=0.25",
    "aiohttp>=3.9",

    # Utilities
    "click>=8.1",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "black>=23.12",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.6",
]

nlp = [
    "transformers>=4.36",
    "tokenizers>=0.15",
    "datasets>=2.15",
]

full = [
    "frink[dev,nlp]",
    "shap>=0.44",
    "hdbscan>=0.8",
    "kaggle>=1.5",
]

[project.urls]
Homepage = "https://github.com/niashwin/homer"
Documentation = "https://github.com/niashwin/homer#readme"
Repository = "https://github.com/niashwin/homer.git"
Issues = "https://github.com/niashwin/homer/issues"

[project.scripts]
frink = "frink.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frink"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end-to-end (deselect with '-m \"not e2e\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["frink"]
branch = true
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 85

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["frink"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "scipy.*",
    "statsmodels.*",
    "matplotlib.*",
    "seaborn.*",
    "torch.*",
    "lightning.*",
    "pingouin.*",
    "polars.*",
]
ignore_missing_imports = true
